--- a/LabGuide_CSS/.project
+++ b/LabGuide_CSS/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LabGuide_RDBMS</name>
+	<name>LabGuide_CSS</name>
 	<comment></comment>
 	<projects>
 	</projects>
